# sparkling_script

./: README.md  SPARKLING2D.ipynb  algo2D_Init.py  benchmark_2D.py  constraints_sets.py  main2D.py  plotTrajectories.py  projectedGradientDescent.py  projectionCstr.py  projectionOp.py  setup.py
fmm/: BBFMM_Repulsion.cpp  CMakeLists.txt
fmm/BBFMM2D/src/: H2_2D_Tree.cpp  kernel_Base.cpp
